--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,13 +1,16 @@
 ---
 # handlers file for ansible-tftpserver
 - name: restart dnsmasq
-  service: name=dnsmasq state=restarted
+  service:
+    name: "dnsmasq"
+    state: "restarted"
 
 - name: restart tftpd-hpa
-  service: name=tftpd-hpa state=restarted
+  service:
+    name: "tftpd-hpa"
+    state: "restarted"
 
 - name: restart apt-cacher-ng
-  service: name=apt-cacher-ng state=restarted
-
-- name: enable network
-  command: bash -c "ifdown {{ pri_bind_interface }} && ifup {{ pri_bind_interface }} && ifdown {{ sec_bind_interface }} && ifup {{ sec_bind_interface }}"
+  service:
+    name: "apt-cacher-ng"
+    state: "restarted"
