--- a/meta/main.yml
+++ b/meta/main.yml
@@ -92,6 +92,7 @@ galaxy_info:
     - trusty
   #  - utopic
   #  - vivid
+    - xenial
   #- name: SLES
   #  versions:
   #  - all
@@ -136,8 +137,3 @@ dependencies: []
   # List your role dependencies here, one per line.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
-  #- { role: mrlesmithjr.apache2 }
-  #- { role: mrlesmithjr.apt-cacher-ng, when: enable_apt_caching is defined and enable_apt_caching }
-  #- { role: mrlesmithjr.config-interfaces, when: config_interfaces is defined and config_interfaces }
-  #- { role: mrlesmithjr.dnsmasq }
-  #- { role: mrlesmithjr.isc-dhcp, when: enable_dhcp is defined and enable_dhcp }
